--- a/form/Footer.tmpl
+++ b/form/Footer.tmpl
@@ -1,4 +1,16 @@
 {{ define "Footer" }}
+    
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+            x.className = "topnav";
+            }
+        }
+    </script>
+
     </body>
 </html>
 {{ end }}
