--- a/form/Menu.tmpl
+++ b/form/Menu.tmpl
@@ -1,6 +1,22 @@
 {{ define "Menu" }}
-<ul>
-    <li><a href="/">HOME</a></li>
-    <li><a href="/new">NEW</a></li>
-</ul>
+
+<div class="title">
+    <table>
+        <th><img src="JL.png"></th>
+        <th><h1 style="font-size: 50px; padding-left: 50px;">Court Management System</h1></th>
+    </table>
+</div>
+
+<div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Case</a>
+    <a href="#news">Person</a>
+    <a href="#contact">Accounting</a>
+    <a href="#about">Jury</a>
+    <a href="#about">Attorney</a>
+    <a href="#about">Configuration</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+</div>
+
 {{ end }}
