--- a/form/Header.tmpl
+++ b/form/Header.tmpl
@@ -2,46 +2,73 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>CMS</title>
-        <meta charset="UTF-8" />
-        <style>
-            .header {
-                background-color: 05245D;
-                color: white;
-            }
-            body {
-                background-color: linen;
-            }
-            h1 {
-                color:white;
-            }
-            ul {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                overflow: hidden;
-                background-color: #333;
-            }
-            li {
-                float: left;
-            }
-            li a {
-                display: block;
-                color: white;
-                text-align: center;
-                padding: 14px 16px;
-                text-decoration: none;
-            }
-            li a:hover {
-                background-color: #111;
-            }
-        </style>
-        <table class="header">
-            <tr>
-                <th><img src="JL.png"></th>
-                <th><h1>Court Management System</h1></th>
-            </tr>
-        </table>
-    </head>
-    <body>
+        
+    <title>AR CMS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+    body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .title {
+        background-color: #05245D;
+        color: white;
+        padding-left: 16px;
+    }
+
+    .topnav {
+        overflow: hidden;
+        background-color: #05245D;
+    }
+
+    .topnav a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+
+    .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    .topnav a.active {
+        background-color:royalblue;
+        color: white;
+    }
+
+    .topnav .icon {
+        display: none;
+    }
+
+    @media screen and (max-width: 600px) {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+        float: right;
+        display: block;
+    }
+    }
+
+    @media screen and (max-width: 600px) {
+        .topnav.responsive {position: relative;}
+        .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    }
+    </style>
+</head>
+<body>
 {{ end }}
