--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -7,7 +7,7 @@
 {{template "_header.html" .}}
 </head>
 <body>
-    {{template "_menu.html"}
+    {{template "_menu.html"}}
 	{{template "content" .}}
 	{{template "_footer.html" .}}
     {{block "scripts" .}}{{end}}
